--- a/package.json
+++ b/package.json
@@ -15,5 +15,7 @@
     "core-js": "^3.8.3",
     "nuxt": "^2.14.12"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@nuxtjs/eslint-module": "^3.0.2"
+  }
 }
